--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -54,6 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="1"
+                    android:id="@+id/linPhone"
                     android:layout_marginTop="@dimen/_24sdp"
                     android:orientation="horizontal"
                     android:background="@drawable/register_default_button"
@@ -106,6 +107,37 @@
                             android:textSize="@dimen/_12sdp"
                             android:background="@drawable/custom_rectangle"
                             android:hint="Mobile Number" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1"
+                    android:visibility="gone"
+                    android:id="@+id/linEmail"
+                    android:layout_marginTop="@dimen/_24sdp"
+                    android:orientation="horizontal"
+                    android:background="@drawable/register_default_button"
+                    android:gravity="center">
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <com.vynkpay.custom.NormalEditText
+                            android:id="@+id/etEmailText"
+                            android:singleLine="true"
+                            android:inputType="textEmailAddress"
+                            android:imeOptions="actionDone"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/_32sdp"
+                            android:textSize="@dimen/_12sdp"
+                            android:background="@drawable/custom_rectangle"
+                            android:hint="Email" />
 
                     </LinearLayout>
 
