--- a/app/src/main/res/layout/custom_welcomelayout.xml
+++ b/app/src/main/res/layout/custom_welcomelayout.xml
@@ -19,7 +19,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.75"
             android:id="@+id/imageAd"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/onboard1"/>
 
     </LinearLayout>
     <LinearLayout
@@ -40,8 +40,7 @@
             android:textSize="@dimen/_18sdp"
             android:textColor="@color/black"
             android:textAllCaps="true"
-            android:textStyle="bold"
-           />
+            android:textStyle="bold" />
 
         <com.vynkpay.custom.NormalTextView
             android:layout_width="match_parent"
@@ -51,8 +50,7 @@
             android:id="@+id/tvText"
             android:textSize="@dimen/_12sdp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-         />
+            android:layout_marginRight="20dp" />
 
     </LinearLayout>
 </LinearLayout>
