--- a/app/src/main/res/layout/activity_load_mcash_success.xml
+++ b/app/src/main/res/layout/activity_load_mcash_success.xml
@@ -47,6 +47,7 @@
                         android:text="@string/ontime"
                         android:gravity="center"
                         android:visibility="gone"
+                        android:id="@+id/tvSuccessmessage"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_24sdp"
                         android:layout_marginLeft="@dimen/_24sdp"
