--- a/app/src/main/res/layout/activity_withdrawn_submited.xml
+++ b/app/src/main/res/layout/activity_withdrawn_submited.xml
@@ -35,6 +35,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/withdrawalRequestsubmit"
                     android:gravity="center"
+                    android:layout_marginRight="@dimen/_24sdp"
+                    android:layout_marginLeft="@dimen/_24sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16sdp" />
 
