--- a/app/src/main/res/layout/activity_wallet_new.xml
+++ b/app/src/main/res/layout/activity_wallet_new.xml
@@ -68,11 +68,11 @@
                                     android:layout_height="match_parent"
                                     android:gravity="center"
                                     android:orientation="vertical">
-
+<!--Bonus wallet-->
                                 <com.vynkpay.custom.NormalTextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="Bonus wallet"
+                                    android:text="Cashback"
                                     android:textColor="@color/black"
                                     android:textSize="@dimen/_14sdp" />
 
